--- a/app/src/main/res/layout/activity_one.xml
+++ b/app/src/main/res/layout/activity_one.xml
@@ -5,42 +5,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/esbg2">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1."
-        android:textSize="100dp"
-        android:textColor="@android:color/white"
-        android:paddingHorizontal="15dp"
-        android:layout_marginTop="70dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/txt01"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="지원 기간이 3일 남은 회사의 자기소개서를\n쓰다가 잠시 휴대전화를 보았다.\n\n익숙한 죄책감은\n웃긴 사진 3장 정도에 사라졌다."
-        android:textSize="20dp"
-        android:textColor="@android:color/white"
-        android:paddingHorizontal="15dp"
-        android:layout_marginTop="70dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
-        android:id="@+id/nextbtn"
-        android:src="@drawable/enterbtnwhite"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewpager01"
         android:background="@android:color/transparent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txt01"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
